Объединение аудио начало

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -92,7 +92,7 @@ message.dont.send.new.request=Don't send a new file, otherwise the current reque
 extra.message.dont.send.new.request=Please don't send a new file until your last request is complete, otherwise it will be canceled.
 message.pdf.images.unzip.bot=Here is the archive with all images. I can't send all images directly to avoid telegram flood wait. \
 You can extract it with @SmartUnzipperBot.
-message.merge.pdfs.welcome=Send me pdf files and when finished choose <b>MERGE</b> on the keyboard.\n\n\
+message.merge.files.welcome=Send me {0} files and when finished choose <b>MERGE</b> on the keyboard.\n\n\
 <b>Warning</b>:\nDon't send new files, otherwise the current request will be canceled.
 merge.command.name=MERGE
 merge.command.description=Merge pdf files
@@ -100,7 +100,7 @@ message.merge.pdfs.no.files=You haven't sent files to merge. Send me pdf files a
 cancel.files.command.name=Cancel files
 cancel.file.command.name=Cancel file
 message.merge.pdfs.canceled=Canceled <b>{0}</b> files
-message.merge.pdfs.non.pdf.file=Send me pdf files
+message.merge.incorrect.file=Send me {0} files
 merging.step=Merging
 message.merge.pdfs.min.2.files=You must to send 2 or more files to merge.
 message.audio.compression.bitrate=Bit rate: <b>{0}K</b>
