--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -80,7 +80,7 @@ extra.message.dont.send.new.request=Iltimos, oxirgi so'rovingiz tugamaguncha yan
 message.pdf.images.unzip.bot=Bu erda barcha rasmlar bilan arxivdan. \
 Oldini olish uchun fotosuratlarni to'g'ridan-to'g'ri yuborolmayman telegram flood wait. \
 Siz uni @SmartUnzipperBot-dan yuklab olishingiz mumkin.
-message.merge.pdfs.welcome=Pdf fayllarini yuboring va tugagandan so'ng birlashish uchun klaviaturadan <b>MERGE</b> ni tanlang. \n\n\
+message.merge.files.welcome={0} fayllarini yuboring va tugagandan so'ng birlashish uchun klaviaturadan <b>MERGE</b> ni tanlang. \n\n\
 <b>Ogohlantirish</b>:\nYangi fayllarni topshirmang, aks holda joriy so'rov bekor qilinadi.
 merge.command.name=MERGE
 merge.command.description=PDF fayllarini birlashtirish
@@ -88,7 +88,7 @@ message.merge.pdfs.no.files=Siz hali birlashish uchun bironta faylni taqdim etma
 cancel.files.command.name=Fayllarni bekor qiling
 cancel.file.command.name=Faylni bekor qilish
 message.merge.pdfs.canceled=Bekor qilindi <b>{0}</b> fayllar
-message.merge.pdfs.non.pdf.file=Menga pdf fayllarini yuboring
+message.merge.incorrect.file=Menga {0} fayllarini yuboring
 message.merge.pdfs.min.2.files=Birlashtirish uchun 2 yoki undan ortiq fayllarni yuborishingiz kerak.
 message.audio.compression.bitrate=Bit rate: <b>{0}K</b>
 audio.compression.compress.command.name=Kichraytiring
