Объединение аудио сделал функционал объединения

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -96,13 +96,13 @@ message.merge.files.welcome=Send me {0} files and when finished choose <b>MERGE<
 <b>Warning</b>:\nDon't send new files, otherwise the current request will be canceled.
 merge.command.name=MERGE
 merge.command.description=Merge pdf files
-message.merge.pdfs.no.files=You haven't sent files to merge. Send me pdf files at first.
+message.merge.no.files=You haven't sent files to merge. Send me {0} files at first.
 cancel.files.command.name=Cancel files
 cancel.file.command.name=Cancel file
-message.merge.pdfs.canceled=Canceled <b>{0}</b> files
+message.merge.canceled=Canceled <b>{0}</b> files
 message.merge.incorrect.file=Send me {0} files
 merging.step=Merging
-message.merge.pdfs.min.2.files=You must to send 2 or more files to merge.
+message.merge.min.2.files=You must to send 2 or more files to merge.
 message.audio.compression.bitrate=Bit rate: <b>{0}K</b>
 audio.compression.compress.command.name=Compress
 message.audio.compress.welcome=Send me an audio to compress. Only the last sent file will be compressed.
