--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -83,12 +83,12 @@ message.merge.files.welcome=Отправьте {0} файлы и когда за
 <b>Предупреждение</b>:\nНе отправляйте новые файлы, иначе текущий запрос будет отменен.
 merge.command.name=MERGE
 merge.command.description=Объединить pdf файлы
-message.merge.pdfs.no.files=Вы еще не отправили ни одного файла для объеденинения. Сначала отправьте мне pdf файлы.
+message.merge.no.files=Вы еще не отправили ни одного файла для объеденинения. Сначала отправьте мне {0} файлы.
 cancel.files.command.name=Отменить файлы
 cancel.file.command.name=Отменить файл
-message.merge.pdfs.canceled=Отменено <b>{0}</b> файлов
+message.merge.canceled=Отменено <b>{0}</b> файлов
 message.merge.incorrect.file=Отправьте мне {0} файлы
-message.merge.pdfs.min.2.files=Вам нужно отправить 2 или более файлов для объединения.
+message.merge.min.2.files=Вам нужно отправить 2 или более файлов для объединения.
 message.audio.compression.bitrate=Bit rate: <b>{0}K</b>
 audio.compression.compress.command.name=Сжать
 message.audio.compress.welcome=Отправьте мне аудио для сжатия. Только последнее отправленное аудио будет сжато.
