--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -84,12 +84,12 @@ message.merge.files.welcome={0} fayllarini yuboring va tugagandan so'ng birlashi
 <b>Ogohlantirish</b>:\nYangi fayllarni topshirmang, aks holda joriy so'rov bekor qilinadi.
 merge.command.name=MERGE
 merge.command.description=PDF fayllarini birlashtirish
-message.merge.pdfs.no.files=Siz hali birlashish uchun bironta faylni taqdim etmadingiz. Iltimos, avval menga pdf fayllarini yuboring.
+message.merge.no.files=Siz hali birlashish uchun bironta faylni taqdim etmadingiz. Iltimos, avval menga {0} fayllarini yuboring.
 cancel.files.command.name=Fayllarni bekor qiling
 cancel.file.command.name=Faylni bekor qilish
-message.merge.pdfs.canceled=Bekor qilindi <b>{0}</b> fayllar
+message.merge.canceled=Bekor qilindi <b>{0}</b> fayllar
 message.merge.incorrect.file=Menga {0} fayllarini yuboring
-message.merge.pdfs.min.2.files=Birlashtirish uchun 2 yoki undan ortiq fayllarni yuborishingiz kerak.
+message.merge.min.2.files=Birlashtirish uchun 2 yoki undan ortiq fayllarni yuborishingiz kerak.
 message.audio.compression.bitrate=Bit rate: <b>{0}K</b>
 audio.compression.compress.command.name=Kichraytiring
 message.audio.compress.welcome=Siqish uchun menga audio yuboring. Faqat oxirgi yuborilgan audio siqiladi.
