--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -80,11 +80,12 @@ extra.message.dont.send.new.request=Iltimos, oxirgi so'rovingiz tugamaguncha yan
 message.pdf.images.unzip.bot=Bu erda barcha rasmlar bilan arxivdan. \
 Oldini olish uchun fotosuratlarni to'g'ridan-to'g'ri yuborolmayman telegram flood wait. \
 Siz uni @SmartUnzipperBot-dan yuklab olishingiz mumkin.
-message.concatenate.files.welcome={0} fayllarini yuboring va tugagandan so''ng birlashish uchun klaviaturadan <b>CONCAT</b> ni tanlang. \n\n\
+message.concatenate.files.welcome=<b>{0}</b> fayllarini yuboring va tugagandan so''ng birlashish uchun klaviaturadan <b>CONCAT</b> ni tanlang. \
+Men qila olmayman bir vaqtning o''zida ko''proq <b>{1}</b> ta faylni birlashtirish.\n\n\
 <b>Ogohlantirish</b>:\nYangi fayllarni topshirmang, aks holda joriy so''rov bekor qilinadi.
 concatenate.command.name=CONCAT
 concatenate.command.description=PDF fayllarini birlashtirish
-message.concatenate.no.files=Siz hali birlashish uchun bironta faylni taqdim etmadingiz. Iltimos, avval menga {0} fayllarini yuboring.
+message.concatenate.no.files=Siz hali birlashish uchun bironta faylni taqdim etmadingiz. Iltimos, avval menga <b>{0}</b> fayllarini yuboring.
 cancel.files.command.name=Fayllarni bekor qiling
 cancel.file.command.name=Faylni bekor qilish
 message.concatenate.canceled=Bekor qilindi <b>{0}</b> fayllar
