--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -166,10 +166,10 @@ no more than <b>60 seconds</b>, no more than <b>8MB</b> in size and must be in <
 vedit.command.description=change video resolution
 vaimake.command.description=make video from audio and image
 vavmerge.command.description=replace or add audio to video
-message.video.cut.welcome=Send me a video to cut. Click <b>PROBE</b> on the keyboard to get current video length.
-message.video.cut.start.point=Send me start time to cut in <b>hh:mm:ss</b>. For example: <b>01:10:05</b> to start cutting at <b>1 hour 10 minutes 5 seconds</b>
-message.video.cut.end.point=Send me end time to cut in <b>hh:mm:ss</b>. For example: <b>02:15:30</b> to end cutting at <b>2 hour 15 minutes 30 seconds</b>
-message.video.cut.invalid.end.point=\u2757\ufe0fEnd time must be after start time
+message.media.cut.welcome=Send me a {0} to cut. Click <b>PROBE</b> on the keyboard to get current {0} length.
+message.media.cut.start.point=Send me start time to cut in <b>hh:mm:ss</b>. For example: <b>01:10:05</b> to start cutting at <b>1 hour 10 minutes 5 seconds</b>
+message.media.cut.end.point=Send me end time to cut in <b>hh:mm:ss</b>. For example: <b>02:15:30</b> to end cutting at <b>2 hour 15 minutes 30 seconds</b>
+message.media.cut.invalid.end.point=\u2757\ufe0fEnd time must be after start time
 message.video.probe.result=Format: <b>{0}</b>\n\
 Resolution: <b>{1}</b>\n\
 Width<b>x</b>Height: <b>{2}</b>\n\
@@ -191,3 +191,5 @@ message.audio.streams.not.found=\u2757\ufe0fThere is no audio in this video to e
 message.subtitle.streams.not.found=\u2757\ufe0fThere are no subtitles in this video to extract
 message.choose=Choose:
 cut.video.command.description=cut video
+audio.media.type.name=audio
+video.media.type.name=video
