--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -156,10 +156,10 @@ bo'lishi kerak <b>60 soniyadan</b>, <b>8MB</b> va <b>MP4</b>formatidan oshmaslig
 vedit.command.description=video piksellar sonini tahrirlash
 vaimake.command.description=rasm va audiodan video yaratish
 vavmerge.command.description=almashtirish yoki videoni audio qo'shish
-message.video.cut.welcome=Tartibga solish uchun menga videoni yuboring. Joriy videoning uzunligini bilish uchun klaviaturadan <b>PROBE</b> -ni tanlang.
-message.video.cut.start.point=Trim boshlanish vaqtini <b>hh:mm:ss</b> formatida yuboring. Masalan: <b>01:10:05</b> <b>1 soat 10 minut 5 soniyadan</b> boshlab qirqishni boshlash
-message.video.cut.end.point=Tugatish vaqtini <b>hh:mm:ss</b> formatida yuboring. Masalan: <b>02:15:30</b> da <b>2 soat 15 daqiqa 30 soniya</b> davomida qirqishni tugatish
-message.video.cut.invalid.end.point=\u2757\ufe0fKesishning tugash vaqti boshlanishidan kech bo'lishi kerak
+message.media.cut.welcome=Tartibga solish uchun menga {0} yuboring. Joriy {0} uzunligini bilish uchun klaviaturadan <b>PROBE</b> -ni tanlang.
+message.media.cut.start.point=Trim boshlanish vaqtini <b>hh:mm:ss</b> formatida yuboring. Masalan: <b>01:10:05</b> <b>1 soat 10 minut 5 soniyadan</b> boshlab qirqishni boshlash
+message.media.cut.end.point=Tugatish vaqtini <b>hh:mm:ss</b> formatida yuboring. Masalan: <b>02:15:30</b> da <b>2 soat 15 daqiqa 30 soniya</b> davomida qirqishni tugatish
+message.media.cut.invalid.end.point=\u2757\ufe0fKesishning tugash vaqti boshlanishidan kech bo'lishi kerak
 message.video.probe.result=Formatlash: <b>{0}</b>\n\
 Qaror: <b>{1}</b>\n\
 Kenglik<b>x</b>Balandlik: <b>{2}</b>\n\
@@ -195,3 +195,5 @@ message.audio.streams.not.found=\u2757\ufe0fUshbu videoda chiqarib olish uchun a
 message.subtitle.streams.not.found=\u2757\ufe0fUshbu videoda subtitrlar yo'q
 message.choose=Tanlang:
 cut.video.command.description=videoni qisqartirish
+audio.media.type.name=audioni
+video.media.type.name=videoni
