Фикс сообщения на узб

--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -34,7 +34,7 @@ message.choose.type=Konvertatsiya qilish uchun klaviaturadan turini tanlang
 message.convert.file=Ishni boshlash uchun menga fayl, havola, matn, video yoki audio xabar yuboring
 message.convert.document.file=Ishni boshlash uchun menga fayl, havola yoki matn yuboring
 message.convert.video.file=Boshlash uchun menga audio xabar yuboring
-message.convert.audio.file=Boshlash uchun menga videoni yuboring
+message.convert.audio.file=Boshlash uchun menga audioni yuboring
 message.conversion.failed=Nimadir noto'g'ri bajarildi. So'rovni hozirda ko'rib bo'lmaydi. \
 Muammo tez orada hal qilinadi va fayl yuboriladi. <b>Sabr qilganingiz uchun tashakkur</b>. \
 <b>Iltimos, voqea haqida xabar bering</b> <a href="https://t.me/smart_file_utils_support">Yordam xizmati</a>.
