Извлечение только аудио нужного языка

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -193,3 +193,5 @@ message.choose=Choose:
 cut.video.command.description=cut video
 audio.media.type.name=audio
 video.media.type.name=video
+message.choose.audio.language=There are multiple audio streams with different languages in your video. \
+Choose language of the audio on the keyboard which you want to extract:
