Отладка извлечение по языку

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -195,3 +195,5 @@ audio.media.type.name=audio
 video.media.type.name=video
 message.choose.audio.language=There are multiple audio streams with different languages in your video. \
 Choose language of the audio on the keyboard which you want to extract:
+extract.all.media.command.description=Extract all
+extract.by.languages.media.command.description=Languages
