Отладка извлечение по языку

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -194,6 +194,10 @@ cut.video.command.description=cut video
 audio.media.type.name=audio
 video.media.type.name=video
 message.choose.audio.language=There are multiple audio streams with different languages in your video. \
-Choose language of the audio on the keyboard which you want to extract:
+Choose <b>Languages</b> button to choose language of the audio on the keyboard which you want to extract or choose <b>Extract all</b> button \
+to extract all audios:
+message.choose.subtitle.language=There are multiple subtitle streams with different languages in your video. \
+Choose <b>Languages</b> button to choose language of the subtitles which you want to extract or choose <b>Extract all</b> button \
+to extract all subtitles:
 extract.all.media.command.description=Extract all
 extract.by.languages.media.command.description=Languages
