--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -194,3 +194,11 @@ message.choose=Выберите:
 cut.video.command.description=обрезать видео
 audio.media.type.name=аудио
 video.media.type.name=видео
+message.choose.audio.language=В вашем видео есть несколько аудиопотоков на разных языках. \
+Нажмите кнопку <b>Языки</b>, чтобы выбрать язык аудио на клавиатуре, который вы хотите извлечь, или нажмите кнопку <b>Извлечь все</b> \
+для извлечения всех аудио:
+message.choose.subtitle.language=В вашем видео есть несколько видов субтитров на разных языках. \
+Нажмите кнопку <b>Языки</b>, чтобы выбрать язык субтитров, который вы хотите извлечь, или нажмите кнопку <b>Извлечь все</b> \
+для извлечения всех субтитров:
+extract.all.media.command.description=Извлечь все
+extract.by.languages.media.command.description=Языки
