--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -197,3 +197,11 @@ message.choose=Tanlang:
 cut.video.command.description=videoni qisqartirish
 audio.media.type.name=audioni
 video.media.type.name=videoni
+message.choose.audio.language=Videongizda turli tillarda bir nechta audio oqimlar mavjud. \
+Siz chiqarishni xohlagan klaviatura audio tilini tanlash uchun <b>Tillar</b> tugmasini bosing yoki <b>Barchasini ajratib oling</b> \
+tugmasini bosing barcha audiolarni chiqarish uchun:
+message.choose.subtitle.language=Videongizda turli tillarda bir nechta subtitrlar mavjud. \
+Siz chiqarmoqchi bo'lgan subtitr tilini tanlash uchun <b>Tillar</b> tugmasini bosing yoki <b>Barchasini ajratib oling</b> \
+tugmasini bosing barcha subtitrlarni chiqarish uchun:
+extract.all.media.command.description=Barchasini ajratib oling
+extract.by.languages.media.command.description=Tillar
