--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -92,10 +92,10 @@ message.dont.send.new.request=Don't send a new file, otherwise the current reque
 extra.message.dont.send.new.request=Please don't send a new file until your last request is complete, otherwise it will be canceled.
 message.pdf.images.unzip.bot=Here is the archive with all images. I can't send all images directly to avoid telegram flood wait. \
 You can extract it with @SmartUnzipperBot.
-message.concatenate.files.welcome=Send me <b>{0}</b> files and when finished choose <b>CONCAT</b> on the keyboard. I can''t \
+message.concatenate.files.welcome=Send me <b>{0}</b> files and when finished choose <b>MERGE</b> on the keyboard. I can''t \
 concatenate more than <b>{1}</b> files at a time.\n\n\
 <b>Warning</b>:\nDon't send new files, otherwise the current request will be canceled.
-concatenate.command.name=CONCAT
+concatenate.command.name=MERGE
 concatenate.command.description=Concatenate pdf files
 message.concatenate.no.files=You haven''t sent files to concatenate. Send me <b>{0}</b> files at first.
 cancel.files.command.name=Cancel files
