Отладка настройки водяного знака

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -201,3 +201,19 @@ Choose <b>Languages</b> button to choose language of the subtitles which you wan
 to extract all subtitles:
 extract.all.media.command.description=Extract all
 extract.by.languages.media.command.description=Languages
+message.no.watermark.welcome=Я устанавливаю водяные знаки в виде картинки или текста на любое видео.\n\n\
+Настройте водяной знак.\n\n\
+<b>Шаг 1. Мы настраиваем водяной знак из картинки или текста?</b>
+text.watermark.command.name=Текст
+image.watermark.command.name=Картинка
+message.watermark.text.welcome=<b>Шаг 2. Напишите текст водяного знака</b>
+message.watermark.text.font.size.welcome=Текст установлен. Укажите размер шрифта.
+message.watermark.position.welcome=<b>Шаг {0}. Нужно определить положение водяного знака относительно исходного видео. \
+В каком углу или по центру устанавливать водяной знак</b>
+message.watermark.text.color.welcome=<b>Шаг 3. Выберите цвет текста</b>
+message.watermark.created=Водяной знак настроен
+message.watermark.ok.welcome=Я устанавливаю водяные знаки в виде картинки или текста на любое видео.
+change.watermark.command.name=Изменить
+message.watermark.image.welcome=<b>Шаг 2. Пришлите картинку для водяного знака</b>
+message.incorrect.watermark.position=Выберите положение водяного знака на клавиатуре
+message.incorrect.watermark.color=Выберите цвет водяного знака на клавиатуре
