Сохранение водяного знака в базе данных

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -217,3 +217,4 @@ change.watermark.command.name=Изменить
 message.watermark.image.welcome=<b>Шаг 2. Пришлите картинку для водяного знака</b>
 message.incorrect.watermark.position=Выберите положение водяного знака на клавиатуре
 message.incorrect.watermark.color=Выберите цвет водяного знака на клавиатуре
+message.incorrect.watermark.type=<b>Шаг 1. Мы настраиваем водяной знак из картинки или текста? Выберите на клавиатуре</b>
