Отладка добавления водяного знака + вывод информации о водяном знаке

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -211,7 +211,7 @@ message.watermark.text.font.size.welcome=Текст установлен. Ука
 message.watermark.position.welcome=<b>Шаг {0}. Нужно определить положение водяного знака относительно исходного видео. \
 В каком углу или по центру устанавливать водяной знак</b>
 message.watermark.text.color.welcome=<b>Шаг 3. Выберите цвет текста</b>
-message.watermark.created=Водяной знак настроен
+message.watermark.created=<b>Отлично! Водяной знак настроен</b>. Теперь отправьте мне видео для добавления водяного знака.
 message.watermark.ok.welcome=Я устанавливаю водяные знаки в виде картинки или текста на любое видео.
 change.watermark.command.name=\u270f\ufe0fИзменить
 message.watermark.image.welcome=<b>Шаг 2. Пришлите картинку для водяного знака</b>
@@ -225,3 +225,15 @@ message.incorrect.font.size=Выберите размер шрифта на кл
 message.watermark.image.transparency.welcome=Водяной знак установлен. \
 Выберите прозрачность от 0 до 1,где  1 - это непрозрачно. 0 - отсутствие водяного знака
 message.watermark.image.incorrect.transparency=Выберите прозрачность на клавиатуре
+message.text.watermark=Ваш водяной знак:\n\
+Тип: <b>Текст</b>\n\
+Текст: <b>{0}</b>\n\
+Размер шрифта: <b>{1}</b>\n\
+Цвет: <b>{2}</b>\n\
+Позиция: <b>{3}</b>
+message.image.watermark=Ваш водяной знак:\n\
+Тип: <b>Картинка</b>\n\
+Картинка: /vmark_img\n\
+Высота: <b>{0}</b>\n\
+Прозрачность: <b>{1}</b>\n\
+Позиция: <b>{2}</b>
