Нормальные сообщения о добавлении файла в очередь

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,6 +6,8 @@ message.vmake.queued=Video will be created from audio and image in <b>{0}</b> fo
 Global queue position: <b>{1}</b>
 message.mute.queued=Audio will be removed from video\n\
 Global queue position: <b>{0}</b>
+message.watermark.queued=Watermark will be added\n\
+Global queue position: <b>{0}</b>
 message.probe.queued=Metadata will be get from video\n\
 Global queue position: <b>{0}</b>
 message.video.cut.queued=Video will be cut\n\
@@ -54,6 +56,7 @@ message.incompressible.video=I can't compress this video
 message.incompressible.audio=I can't compress this audio
 formats.command.description=conversion formats
 waiting.step=Waiting
+watermark.adding.step=Watermark adding
 downloading.step=Downloading
 downloading.files.step=Downloaded {0} files of {1}
 converting.step=Converting
