Добавление субтитров к видео

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -12,7 +12,7 @@ message.probe.queued=Metadata will be get from video\n\
 Global queue position: <b>{0}</b>
 message.video.cut.queued=Video will be cut\n\
 Global queue position: <b>{0}</b>
-message.concatenate.files.queued=The files will be concatenated to one\n\
+message.concatenate.files.queued=The files will be merged to one\n\
 Global queue position: <b>{0}</b>
 message.compress.queued=The file will be compressed\n\
 Global queue position: <b>{0}</b>
@@ -21,7 +21,7 @@ message.file.size=Size: <b>{0}</b>
 message.files.count=Files: <b>{0}</b>
 message.choose.another.format=Choose another format
 message.choose.target.extension.default.conversion=Great! I can convert it. Choose type for converting on the keyboard. Keep sending files if you want to combine them into 1 format. \
-For example images to pdf or concatenate pdf files.
+For example images to pdf or merge pdf files.
 message.choose.target.extension.video.audio.conversion=Great! I can convert it. Choose type for converting on the keyboard.
 message.unsupported.format=I can’t work with files in this format yet. The supported file formats can be found \
 in <a href="https://tgraph.io/Bot-SmartFileUtils-05-25">Bot SmartFileUtils</a> article.
@@ -99,14 +99,14 @@ message.concatenate.files.welcome=Send me <b>{0}</b> files and when finished cho
 concatenate more than <b>{1}</b> files at a time.\n\n\
 <b>Warning</b>:\nDon't send new files, otherwise the current request will be canceled.
 concatenate.command.name=MERGE
-concatenate.command.description=Concatenate pdf files
-message.concatenate.no.files=You haven''t sent files to concatenate. Send me <b>{0}</b> files at first.
+concatenate.command.description=Merge pdf files
+message.concatenate.no.files=You haven''t sent files to merge. Send me <b>{0}</b> files at first.
 cancel.files.command.name=Cancel files
 cancel.file.command.name=Cancel file
 message.concatenate.canceled=Canceled <b>{0}</b> files
 message.concatenate.incorrect.file=Send me {0} files
-concatenation.step=Concatenation
-message.concatenate.min.2.files=You must to send 2 or more files to concatenate.
+concatenation.step=Merging
+message.concatenate.min.2.files=You must to send 2 or more files to merge.
 message.audio.compression.bitrate=Bit rate: <b>{0}K</b>
 audio.compression.compress.command.name=Compress
 message.audio.compress.welcome=Send me an audio to compress. Only the last sent file will be compressed.
@@ -150,11 +150,17 @@ message.vaimake.awaiting.audio=Okay you sent image, now send me an <b>audio</b>
 vaimake.command.name=Make a video
 message.vaimake.files.canceled=Files canceled. Send me an audio and image to make a video.
 message.vaimake.click=Great! Now click <b>Make a video</b> on the keyboard
-message.vavmerge.welcome=Send me a <b>video</b> and <b>audio</b> to merge and click <b>Merge</b> on the keyboard
-message.vavmerge.awaiting.video=Okay you sent audio, now send me a <b>video</b>
-message.vavmerge.awaiting.audio=Okay you sent video, now send me an <b>audio</b>
+message.vavmerge.welcome=Send me a <b>video</b> and <b>audio or subtitles</b> to merge and click <b>Merge</b> on the keyboard
+message.vavmerge.awaiting.video.subtitles=Okay you sent audio, now send me a <b>video or subtitles</b>
+message.vavmerge.awaiting.audio.subtitles=Okay you sent video, now send me an <b>audio or subtitles</b>
+message.vavmerge.awaiting.video.audio=Okay you sent subtitles, now send me an <b>audio or video</b>
+message.vavmerge.awaiting.subtitles=Okay you sent the video and audio, \
+now send me a <b>subtitles or click Merge on the keyboard to merge video and audio</b>
+message.vavmerge.awaiting.audio=Okay you sent the video and subtitles, \
+now send me an <b>audio or click Merge on the keyboard to merge video and subtitles</b>
+message.vavmerge.awaiting.video=Okay you sent the subtitles and audio, now send me a <b>video</b>
 vavmerge.command.name=Merge
-message.vavmerge.files.canceled=Files canceled. Send me a video and audio to merge.
+message.vavmerge.files.canceled=Files canceled. Send me a video and audio or subtitles to merge.
 message.vavmerge.click=Great! Now click <b>Merge</b> on the keyboard
 message.non.command.features=\ud83d\udca1<b>Video format</b> to convert video to another format. For example: <b>MP4, MKV</b> etc.\n\
 \ud83d\udca1<b>Audio format</b> to extract audio from video. For example: <b>MP3, OPUS</b> etc.\n\
