--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -139,7 +139,7 @@ message.compress.audio.output.frequency=Chastotani: <b>{0}Hz</b>
 message.compress.audio.frequency.updated=Chastotasi yangilandi
 message.vavmerge.welcome=Menga <b>video</b> va <b>audio</b> yuboring va klaviaturangizdagi <b>Birlashtirish</b> tugmasini bosing
 message.vavmerge.awaiting.image=Yaxshi, siz audio yubordingiz, endi menga <b>video</b> ni yuboring
-message.vavmerge.awaiting.audio=Yaxshi, siz videoni yubordingiz, endi menga <b>audio</b> ni yuboring
+message.vavmerge.awaiting.audio.subtitles=Yaxshi, siz videoni yubordingiz, endi menga <b>audio</b> ni yuboring
 vavmerge.command.name=Birlashtirish
 message.vavmerge.files.canceled=Fayllar bekor qilindi. Birlashtirish uchun menga video va audio yuboring.
 message.vavmerge.click=Zo'r! Endi klaviaturada <b>Birlashtirish</b> tugmasini bosing.
