Сообщения для каждой из локализаций

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -210,39 +210,39 @@ Choose <b>Languages</b> button to choose language of the subtitles which you wan
 to extract all subtitles:
 extract.all.media.command.description=Extract all
 extract.by.languages.media.command.description=Languages
-message.no.watermark.welcome=Я устанавливаю водяные знаки в виде картинки или текста на любое видео.\n\n\
-Настройте водяной знак.\n\n\
-<b>Шаг 1. Мы настраиваем водяной знак из картинки или текста?</b>
-text.watermark.command.name=Текст
-image.watermark.command.name=Картинка
-message.watermark.text.welcome=<b>Шаг 2. Напишите текст водяного знака</b>
-message.watermark.text.font.size.welcome=Текст установлен. Укажите размер шрифта.
-message.watermark.position.welcome=<b>Шаг {0}. Нужно определить положение водяного знака относительно исходного видео. \
-В каком углу или по центру устанавливать водяной знак</b>
-message.watermark.text.color.welcome=<b>Шаг 3. Выберите цвет текста</b>
-message.watermark.created=<b>Отлично! Водяной знак настроен</b>. Теперь отправьте мне видео для добавления водяного знака.
-message.watermark.ok.welcome=Я устанавливаю водяные знаки в виде картинки или текста на любое видео.
-change.watermark.command.name=\u270f\ufe0fИзменить
-message.watermark.image.welcome=<b>Шаг 2. Пришлите картинку для водяного знака</b>
-message.incorrect.watermark.position=Выберите положение водяного знака на клавиатуре
-message.incorrect.watermark.color=Выберите цвет водяного знака на клавиатуре
-message.incorrect.watermark.type=<b>Шаг 1. Мы настраиваем водяной знак из картинки или текста? Выберите на клавиатуре</b>
-message.incorrect.video.file=Отправьте мне видео для добавления водяного знака
-message.incorrect.watermark.image.height=Выберите ширину водяного знака на клавиатуре
-message.watermark.image.height.welcome=Выберите высоту водяного знака
-message.incorrect.font.size=Выберите размер шрифта на клавиатуре
-message.watermark.image.transparency.welcome=Водяной знак установлен. \
-Выберите прозрачность от 0 до 1,где  1 - это непрозрачно. 0 - отсутствие водяного знака
-message.watermark.image.incorrect.transparency=Выберите прозрачность на клавиатуре
-message.text.watermark=Ваш водяной знак:\n\
-Тип: <b>Текст</b>\n\
-Текст: <b>{0}</b>\n\
-Размер шрифта: <b>{1}</b>\n\
-Цвет: <b>{2}</b>\n\
-Позиция: <b>{3}</b>
-message.image.watermark=Ваш водяной знак:\n\
-Тип: <b>Картинка</b>\n\
-Картинка: /vmark_img\n\
-Высота: <b>{0}</b>\n\
-Прозрачность: <b>{1}</b>\n\
-Позиция: <b>{2}</b>
+message.no.watermark.welcome=I watermark any video with a picture or text. \n\n\
+First, set up your watermark. \n\n\
+<b>Step 1. Are we setting up a watermark from an image or text?</b>
+text.watermark.command.name=Text
+image.watermark.command.name=Image
+message.watermark.text.welcome=<b>Step 2. Write your watermark text</b>
+message.watermark.text.font.size.welcome=The text is set. Specify the font size.
+message.watermark.position.welcome=<b>Step {0}. You need to determine the position of the watermark relative to the original video. \
+In which corner or center to place the watermark</b>
+message.watermark.text.color.welcome=<b>Step 3. Choose a text color</b>
+message.watermark.created=<b>Great! The watermark is configured</b>. Now send me a video for adding the watermark.
+message.watermark.ok.welcome=I watermark any video with a picture or text. Send me a video to get started.
+change.watermark.command.name=\u270f\ufe0fEdit
+message.watermark.image.welcome=<b>Step 2. Send an image for the watermark</b>
+message.incorrect.watermark.position=Select the position of the watermark on the keyboard
+message.incorrect.watermark.color=Choose the watermark color on your keyboard
+message.incorrect.watermark.type=<b>Step 1. Are we setting up a watermark from a picture or text? Select on the keyboard</b>
+message.incorrect.video.file=Send me a video to add the watermark
+message.incorrect.watermark.image.height=Select the height of the watermark on your keyboard
+message.watermark.image.height.welcome=Select the height of the watermark
+message.incorrect.font.size=Select the font size on the keyboard
+message.watermark.image.transparency.welcome=The watermark is set. \
+Choose transparency from 0 to 1, where 1 is opaque. 0 - no watermark
+message.watermark.image.incorrect.transparency=Select transparency on your keyboard
+message.text.watermark=Your watermark:\n\
+Type: <b>Text</b>\n\
+Text: <b>{0}</b>\n\
+Font size: <b>{1}</b>\n\
+Color: <b>{2}</b>\n\
+Position: <b>{3}</b>
+message.image.watermark=Your watermark:\n\
+Type: <b>Image</b>\n\
+Image: /vmark_img\n\
+Height: <b>{0}</b>\n\
+Transparency: <b>{1}</b>\n\
+Position: <b>{2}</b>
