--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -137,11 +137,17 @@ message.vaimake.files.canceled=Fayllar bekor qilindi. Video yaratish uchun menga
 message.vaimake.click=Zo'r! Endi klaviaturada <b>Videoni yarating</b> tugmasini bosing
 message.compress.audio.output.frequency=Chastotani: <b>{0}Hz</b>
 message.compress.audio.frequency.updated=Chastotasi yangilandi
-message.vavmerge.welcome=Menga <b>video</b> va <b>audio</b> yuboring va klaviaturangizdagi <b>Birlashtirish</b> tugmasini bosing
-message.vavmerge.awaiting.image=Yaxshi, siz audio yubordingiz, endi menga <b>video</b> ni yuboring
-message.vavmerge.awaiting.audio.subtitles=Yaxshi, siz videoni yubordingiz, endi menga <b>audio</b> ni yuboring
+message.vavmerge.welcome=Menga <b>video</b> va <b>audio yoki subtitrlar</b> yuboring va klaviaturada <b>Birlashtirish</b> tugmasini bosing
+message.vavmerge.awaiting.video.subtitles=Yaxshi, siz audio yubordingiz, endi menga <b>video yoki subtitrlar</b> yuboring
+message.vavmerge.awaiting.audio.subtitles=Xo'sh, siz video yubordingiz, endi menga <b>audio yoki subtitrlar</b> yuboring
+message.vavmerge.awaiting.video.audio=OK, siz subtitrlar yubordingiz, endi menga <b>video yoki audio</b> yuboring
+message.vavmerge.awaiting.subtitles=Yaxshi, siz video va audio yubordingiz, \
+endi menga <b>subtitrlar yuboring yoki video va audio birlashtirish uchun klaviaturada birlashtirish tugmasini bosing</b>
+message.vavmerge.awaiting.audio=Yaxshi, siz video va subtitrlar yubordingiz, \
+endi menga audio yuboring yoki video va subtitrni <b>Birlashtirish</b> uchun klaviaturada birlashtirish-ni bosing
+message.vavmerge.awaiting.video=Xo'sh, siz subtitr va audio xabar yubordingiz, endi menga <b>video</b> ni yuboring
 vavmerge.command.name=Birlashtirish
-message.vavmerge.files.canceled=Fayllar bekor qilindi. Birlashtirish uchun menga video va audio yuboring.
+message.vavmerge.files.canceled=Fayllar bekor qilindi. Birlashtirish uchun menga video va audio yoki subtitrlar yuboring.
 message.vavmerge.click=Zo'r! Endi klaviaturada <b>Birlashtirish</b> tugmasini bosing.
 message.non.command.features=\ud83d\udca1<b>Video formati</b> videoni boshqa formatga o'tkazish uchun. Masalan: <b>MP4, MKV</b> va boshqalar.\n\
 \ud83d\udca1Videodan audio chiqarib olish uchun <b>audio format</b>. Masalan: <b>MP3, OPUS</b> va boshqalar.\n\
@@ -205,3 +211,42 @@ Siz chiqarmoqchi bo'lgan subtitr tilini tanlash uchun <b>Tillar</b> tugmasini bo
 tugmasini bosing barcha subtitrlarni chiqarish uchun:
 extract.all.media.command.description=Barchasini ajratib oling
 extract.by.languages.media.command.description=Tillar
+message.no.watermark.welcome=Men har qanday videoni rasm yoki matn bilan moybo'yoqli qilaman.\n\n\
+Birinchidan, moybo'yoqli belgini o'rnating.\n\n\
+<b>Qadam 1. Biz rasm yoki matndan suv belgisi o'rnatayapmizmi?</b>
+text.watermark.command.name=Matn
+image.watermark.command.name=Rasm
+message.watermark.text.welcome=<b>Qadam 2. O'zingizning moybo'yoqli matningizni yozing</b>
+message.watermark.text.font.size.welcome=Matn o'rnatilgan. Shrift hajmini ko'rsating.
+message.watermark.position.welcome=<b>{0} qadam. Filigraning asl videoga nisbatan o''rnini aniqlashingiz kerak. \
+Filigrani qaysi burchakda yoki markazda joylashtirish kerak</b>
+message.watermark.text.color.welcome=<b>Qadam 3. Matn rangini tanlang</b>
+message.watermark.created=<b>Zo'r! Filigran tuzilgan</b>. Endi menga moybo'yoqli qo'shish uchun video yuboring.
+message.watermark.ok.welcome=Men har qanday videoni rasm yoki matn bilan moybo'yoqli qilaman. Boshlash uchun menga video yuboring.
+change.watermark.command.name=\u270f\ufe0fTahrirlash
+message.watermark.image.welcome=<b>Qadam 2. Suv belgisi uchun rasm yuboring</b>
+message.incorrect.watermark.position=Klaviaturada moybo'yoqli joyni tanlang
+message.incorrect.watermark.color=Klaviaturada moybo'yoqli rangni tanlang
+message.incorrect.watermark.type=<b>Qadam 1. Biz rasm yoki matndan suv belgisi o'rnatayapmizmi? Klaviaturadan tanlang</b>
+message.incorrect.video.file=Filigrani qo'shish uchun menga video yuboring
+message.incorrect.watermark.image.height=Klaviaturadagi suv belgisi balandligini tanlang
+message.watermark.image.height.welcome=Filigraning balandligini tanlang
+message.incorrect.font.size=Klaviaturada shrift hajmini tanlang
+message.watermark.image.transparency.welcome=Filigran o'rnatilgan. \
+0 dan 1 gacha shaffoflikni tanlang, bu erda 1 shaffof emas. 0 - suv belgisi yo'q
+message.watermark.image.incorrect.transparency=Klaviaturangizdagi shaffoflikni tanlang
+message.text.watermark=Sizning suv belgingiz:\n\
+Turi: <b>Matn</b>\n\
+Matn: <b>{0}</b>\n\
+Shrift hajmi: <b>{1}</b>\n\
+Rang: <b>{2}</b>\n\
+Lavozim: <b>{3}</b>
+message.image.watermark=Sizning suv belgingiz:\n\
+Turi: <b>Rasm</b>\n\
+Rasm: /vmark_img\n\
+Balandligi: <b>{0}</b>\n\
+Shaffoflik: <b>{1}</b>\n\
+Lavozim: <b>{2}</b>
+message.watermark.queued=Filigran qo''shiladi\n\
+Global navbatdagi joy: <b>{0}</b>
+watermark.adding.step=Suv belgisi
