Отладка того что сделал

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -150,7 +150,8 @@ message.vaimake.awaiting.audio=Okay you sent image, now send me an <b>audio</b>
 vaimake.command.name=Make a video
 message.vaimake.files.canceled=Files canceled. Send me an audio and image to make a video.
 message.vaimake.click=Great! Now click <b>Make a video</b> on the keyboard
-message.vavmerge.welcome=Send me a <b>video</b> and <b>audio or subtitles</b> to merge and click <b>Merge</b> on the keyboard
+message.vavmerge.welcome=Send me <b>video</b> and <b>audio or subtitles</b>, and click <b>Merge</b> on the keyboard for \
+replace or add audio to video and also add subtitles to video
 message.vavmerge.awaiting.video.subtitles=Okay you sent audio, now send me a <b>video or subtitles</b>
 message.vavmerge.awaiting.audio.subtitles=Okay you sent video, now send me an <b>audio or subtitles</b>
 message.vavmerge.awaiting.video.audio=Okay you sent subtitles, now send me an <b>audio or video</b>
