--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -137,7 +137,8 @@ message.vaimake.files.canceled=Fayllar bekor qilindi. Video yaratish uchun menga
 message.vaimake.click=Zo'r! Endi klaviaturada <b>Videoni yarating</b> tugmasini bosing
 message.compress.audio.output.frequency=Chastotani: <b>{0}Hz</b>
 message.compress.audio.frequency.updated=Chastotasi yangilandi
-message.vavmerge.welcome=Menga <b>video</b> va <b>audio yoki subtitrlar</b> yuboring va klaviaturada <b>Birlashtirish</b> tugmasini bosing
+message.vavmerge.welcome=Menga <b>video</b> va <b>audio yoki subtitrlar</b> yuboring va \
+uchun klaviaturada <b>Birlashtirish</b> tugmasini bosing. almashtiring yoki videoga audio qo'shing, shuningdek videoga subtitr qo'shing
 message.vavmerge.awaiting.video.subtitles=Yaxshi, siz audio yubordingiz, endi menga <b>video yoki subtitrlar</b> yuboring
 message.vavmerge.awaiting.audio.subtitles=Xo'sh, siz video yubordingiz, endi menga <b>audio yoki subtitrlar</b> yuboring
 message.vavmerge.awaiting.video.audio=OK, siz subtitrlar yubordingiz, endi menga <b>video yoki audio</b> yuboring
